@@ -3,6 +3,7 @@ Changelog for logilab database package
 
 --
 * fix sqlite datetime parsing
+* new sql_concat_string method on db-helpers, with specific implementation for sqlserver
 
 2010-06-11  --  1.0.3
     * add support for wildcard search when using postgres (require postgres >= 8.4)
